before reservationResponseDTO