@@ -6,53 +6,62 @@ import com.vriddhi.tablebookingapp.model.User;
 import com.vriddhi.tablebookingapp.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.Optional;
-
+import java.util.stream.Collectors;
+import java.util.List;
 
 @Service
 public class UserService {
 
-    @Autowired
-    private UserRepository userRepository;
+    private final UserRepository userRepository;
 
-    public static UserResponseDTO getUserResponseDTO(User user) {
-        return new UserResponseDTO(user.getUserId(), user.getUserName(), user.getEmail(), user.getPhone(), user.getUserAddress());
+    @Autowired
+    public UserService(UserRepository userRepository) {
+        this.userRepository = userRepository;
     }
 
     public UserResponseDTO loginUser(LoginRequestDTO loginRequestDTO) {
-        String email = loginRequestDTO.getEmail();
-        String password = loginRequestDTO.getPassword();
-        User user = userRepository.findByEmail(email);
-        System.out.println("User: " + user);
-        if (user != null && user.getPassword().equals(password)) {
-            System.out.println("User logged in successfully");
-            return getUserResponseDTO(user);
+        User user = userRepository.findByEmail(loginRequestDTO.getEmail());
+
+        if (user != null && user.getPassword().equals(loginRequestDTO.getPassword())) {
+            return mapToUserResponseDTO(user);
         }
+
         return null;
     }
 
+    @Transactional
     public UserResponseDTO saveUser(User user) {
-
-        return getUserResponseDTO(userRepository.save(user));
+        return mapToUserResponseDTO(userRepository.save(user));
     }
 
     public Optional<UserResponseDTO> getUserById(Long userId) {
-        Optional<User> user = userRepository.findById(userId);
-        return user.map(UserService::getUserResponseDTO);
+        return userRepository.findById(userId).map(this::mapToUserResponseDTO);
     }
 
     public UserResponseDTO getUserByEmail(String email) {
-
-        return getUserResponseDTO(userRepository.findByEmail(email));
+        User user = userRepository.findByEmail(email);
+        if (user == null) {
+            throw new IllegalArgumentException("User with email " + email + " not found.");
+        }
+        return mapToUserResponseDTO(user);
     }
 
+    @Transactional
     public void deleteUser(Long userId) {
         userRepository.deleteById(userId);
     }
 
-    public Iterable<UserResponseDTO> getUsers() {
+    public List<UserResponseDTO> getUsers() {
         return userRepository.findAll()
-                .stream().map(UserService::getUserResponseDTO).toList();
+                .stream()
+                .map(this::mapToUserResponseDTO)
+                .collect(Collectors.toList());
+    }
+
+    private UserResponseDTO mapToUserResponseDTO(User user) {
+        return new UserResponseDTO(user.getUserId(), user.getUserName(), user.getEmail(), user.getPhone(), user.getUserAddress());
     }
 }
